--- a/src/main/resources/views/AppointmentMenage-view.fxml
+++ b/src/main/resources/views/AppointmentMenage-view.fxml
@@ -3,53 +3,72 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 
-<AnchorPane prefHeight="480.0" prefWidth="720.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="views.AppointmentMenageView">
-   <children>
-      <Label fx:id="usernameLabelAppointments" layoutX="594.0" layoutY="30.0" prefHeight="23.0" prefWidth="100.0" text="Label" />
-      <Label fx:id="appointmentLabel" alignment="CENTER" layoutX="44.0" layoutY="25.0" prefHeight="34.0" prefWidth="179.0" stylesheets="@../com/project/cwmsgradle/styles.css" text="Zarządzaj zleceniami" />
-      <VBox fx:id="vbAppointment" alignment="TOP_CENTER" layoutX="26.0" layoutY="140.0" prefHeight="384.0" prefWidth="167.0" stylesheets="@../com/project/cwmsgradle/styles.css" AnchorPane.bottomAnchor="20.0" AnchorPane.leftAnchor="20.0" AnchorPane.rightAnchor="533.0">
-         <opaqueInsets>
-            <Insets />
-         </opaqueInsets>
-         <children>
-            <Button fx:id="addAppointmentButton" mnemonicParsing="false" prefHeight="30.0" prefWidth="100.0" text="Dodaj zlecenie">
-               <VBox.margin>
-                  <Insets top="60.0" />
-               </VBox.margin>
-            </Button>
-            <Button fx:id="editAppointmentButton" mnemonicParsing="false" prefHeight="30.0" prefWidth="100.0" text="Edytuj">
-               <VBox.margin>
-                  <Insets top="15.0" />
-               </VBox.margin>
-            </Button>
-            <Button fx:id="endAppointmentButton" mnemonicParsing="false" prefHeight="30.0" prefWidth="100.0" text="Zakończ">
-               <VBox.margin>
-                  <Insets top="15.0" />
-               </VBox.margin>
-            </Button>
-            <Button fx:id="goBackButton" mnemonicParsing="false" prefHeight="20.0" prefWidth="60.0" text="Powrót">
-               <VBox.margin>
-                  <Insets top="40.0" />
-               </VBox.margin>
-            </Button>
-         </children>
-      </VBox>
-      <ImageView fitHeight="22.0" fitWidth="22.0" layoutX="22.0" layoutY="31.0">
-         <image>
-            <Image url="@../icons/naprawa.png" />
-         </image>
-      </ImageView>
-      <HBox fx:id="hbAppointment" layoutX="198.0" layoutY="66.0" prefHeight="384.0" prefWidth="500.0" stylesheets="@../com/project/cwmsgradle/styles.css" AnchorPane.bottomAnchor="20.0" AnchorPane.rightAnchor="20.0" />
-      <ImageView fitHeight="22.0" fitWidth="22.0" layoutX="565.0" layoutY="31.0">
-         <image>
-            <Image url="@../icons/user.png" />
-         </image>
-      </ImageView>
-   </children>
+<AnchorPane fx:id="apAppointments" prefHeight="480.0" prefWidth="720.0" stylesheets="@../com/project/cwmsgradle/styles.css" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.project.cwmsgradle.controlls.AppointmentMenageController">
+    <children>
+        <Label fx:id="usernameLabelAppointments" layoutX="594.0" layoutY="30.0" prefHeight="23.0" prefWidth="100.0" text="Label" />
+        <Label fx:id="appointmentLabel" alignment="CENTER" layoutX="44.0" layoutY="25.0" prefHeight="34.0" prefWidth="179.0" stylesheets="@../com/project/cwmsgradle/styles.css" text="Zarządzaj zleceniami" />
+        <VBox fx:id="vbAppointment" alignment="TOP_CENTER" layoutX="26.0" layoutY="140.0" prefHeight="384.0" prefWidth="167.0" stylesheets="@../com/project/cwmsgradle/styles.css" AnchorPane.bottomAnchor="20.0" AnchorPane.leftAnchor="20.0" AnchorPane.rightAnchor="533.0">
+            <opaqueInsets>
+                <Insets />
+            </opaqueInsets>
+            <children>
+                <Button fx:id="addAppointmentButton" mnemonicParsing="false" prefHeight="30.0" prefWidth="100.0" text="Dodaj zlecenie">
+                    <VBox.margin>
+                        <Insets top="60.0" />
+                    </VBox.margin>
+                </Button>
+                <Button fx:id="editAppointmentButton" mnemonicParsing="false" prefHeight="30.0" prefWidth="100.0" text="Edytuj">
+                    <VBox.margin>
+                        <Insets top="15.0" />
+                    </VBox.margin>
+                </Button>
+                <Button fx:id="endAppointmentButton" mnemonicParsing="false" prefHeight="30.0" prefWidth="100.0" text="Zakończ">
+                    <VBox.margin>
+                        <Insets top="15.0" />
+                    </VBox.margin>
+                </Button>
+                <Button fx:id="goBackButton" mnemonicParsing="false" prefHeight="20.0" prefWidth="60.0" text="Powrót">
+                    <VBox.margin>
+                        <Insets top="40.0" />
+                    </VBox.margin>
+                </Button>
+            </children>
+        </VBox>
+        <ImageView fitHeight="22.0" fitWidth="22.0" layoutX="22.0" layoutY="31.0">
+            <image>
+                <Image url="@../icons/naprawa.png" />
+            </image>
+        </ImageView>
+        <HBox fx:id="hbAppointment" alignment="CENTER" layoutX="198.0" layoutY="66.0" prefHeight="384.0" prefWidth="500.0" stylesheets="@../com/project/cwmsgradle/styles.css" AnchorPane.bottomAnchor="20.0" AnchorPane.rightAnchor="20.0">
+            <children>
+                <TableView prefHeight="384.0" prefWidth="503.0">
+                    <columns>
+                        <TableColumn prefWidth="45.0" text="ID Klienta" />
+                        <TableColumn prefWidth="45.0" text="ID Pojazdu" />
+                        <TableColumn prefWidth="45.0" text="ID Zlecenia" />
+                        <TableColumn prefWidth="92.0" text="Opis" />
+                        <TableColumn prefWidth="79.0" text="Data" />
+                        <TableColumn prefWidth="78.0" text="Koszt" />
+                        <TableColumn prefWidth="75.0" text="Obsługuje" />
+                    </columns>
+                    <HBox.margin>
+                        <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
+                    </HBox.margin>
+                </TableView>
+            </children>
+        </HBox>
+        <ImageView fitHeight="22.0" fitWidth="22.0" layoutX="565.0" layoutY="31.0">
+            <image>
+                <Image url="@../icons/user.png" />
+            </image>
+        </ImageView>
+    </children>
 </AnchorPane>
