--- a/src/main/resources/views/UsersPasswordEdit-view.fxml
+++ b/src/main/resources/views/UsersPasswordEdit-view.fxml
@@ -7,7 +7,6 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.VBox?>
 
-
 <AnchorPane fx:id="apUsersEdit" prefHeight="400.0" prefWidth="300.0" stylesheets="@../com/project/cwmsgradle/styles.css" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.project.cwmsgradle.controlls.UsersPasswordEditController">
    <children>
       <VBox fx:id="vbUsersEdit" alignment="TOP_CENTER" layoutX="31.2" layoutY="39.0" prefHeight="332.0" prefWidth="239.0" AnchorPane.bottomAnchor="30.0" AnchorPane.leftAnchor="31.0" AnchorPane.rightAnchor="30.0" AnchorPane.topAnchor="30.0">
@@ -22,12 +21,17 @@
                   <Insets left="20.0" right="20.0" top="20.0" />
                </VBox.margin>
             </TextField>
-            <Button fx:id="passwordEditButton" onAction="#onSaveButtonClick" mnemonicParsing="false" prefHeight="30.0" prefWidth="100.0" text="Zmień">
+            <TextField fx:id="confirmPasswordField" promptText="Powtórz hasło">
+               <VBox.margin>
+                  <Insets left="20.0" right="20.0" top="10.0" />
+               </VBox.margin>
+            </TextField>
+            <Button fx:id="passwordEditButton" mnemonicParsing="false" onAction="#onSaveButtonClick" prefHeight="30.0" prefWidth="100.0" text="Zmień">
                <VBox.margin>
                   <Insets bottom="20.0" left="20.0" right="20.0" top="45.0" />
                </VBox.margin>
             </Button>
-            <Button fx:id="goBackButton" onAction="#onGoBackButtonClick" mnemonicParsing="false" prefHeight="30.0" prefWidth="80.0" text="Powrót">
+            <Button fx:id="goBackButton" mnemonicParsing="false" onAction="#onGoBackButtonClick" prefHeight="30.0" prefWidth="80.0" text="Powrót">
                <VBox.margin>
                   <Insets top="10.0" />
                </VBox.margin>
