--- a/src/main/resources/views/AppointmentEdit-view.fxml
+++ b/src/main/resources/views/AppointmentEdit-view.fxml
@@ -39,7 +39,7 @@
             </children>
         </VBox>
         <Label fx:id="appointmentAddLabel" alignment="CENTER" contentDisplay="CENTER" layoutX="300.0" layoutY="29.0" prefHeight="22.0" prefWidth="125.0" text="Edytuj zlecenie" textAlignment="CENTER" />
-        <Button fx:id="editAppointmentButton" layoutX="250.0" layoutY="423.0" mnemonicParsing="false" onAction="#onEditButtonClick" prefHeight="30.0" prefWidth="100.0" text="Edytuj" />
+        <Button fx:id="editInfoAppointmentButton" layoutX="250.0" layoutY="423.0" mnemonicParsing="false" onAction="#onEditButtonClick" prefHeight="30.0" prefWidth="100.0" text="Edytuj" />
         <Button fx:id="goBackButton" layoutX="377.0" layoutY="423.0" mnemonicParsing="false" onAction="#onGoBackButtonClick" prefHeight="30.0" prefWidth="100.0" text="Powrót" />
     </children>
 </AnchorPane>
