--- a/src/main/resources/views/AppointmentMenage-view.fxml
+++ b/src/main/resources/views/AppointmentMenage-view.fxml
@@ -30,7 +30,7 @@
                         <Insets top="15.0" />
                     </VBox.margin>
                 </Button>
-                <Button fx:id="endAppointmentButton" mnemonicParsing="false" prefHeight="30.0" prefWidth="100.0" text="Zakończ">
+                <Button fx:id="endAppointmentButton" onAction="#onEndAppointmentButtonClick" mnemonicParsing="false" prefHeight="30.0" prefWidth="100.0" text="Zakończ">
                     <VBox.margin>
                         <Insets top="15.0" />
                     </VBox.margin>
