--- a/src/main/resources/views/AppointmentEnd-view.fxml
+++ b/src/main/resources/views/AppointmentEnd-view.fxml
@@ -27,12 +27,12 @@
                   <Insets left="20.0" right="20.0" top="10.0" />
                </VBox.margin>
             </TextField>
-            <Button fx:id="endAppointmentButton" mnemonicParsing="false" prefHeight="30.0" text="Zakończ zlecenie">
+            <Button fx:id="endAppointmentButton" onAction="#onEndAppointmentButtonClick" mnemonicParsing="false" prefHeight="30.0" text="Zakończ zlecenie">
                <VBox.margin>
                   <Insets top="20.0" />
                </VBox.margin>
             </Button>
-            <Button fx:id="goBackButton" mnemonicParsing="false" prefHeight="30.0" text="Powrót">
+            <Button fx:id="goBackButton" onAction="#onGoBackButtonClick" mnemonicParsing="false" prefHeight="30.0" text="Powrót">
                <VBox.margin>
                   <Insets top="20.0" />
                </VBox.margin>
