--- a/src/main/resources/views/AppointmentMenage-view.fxml
+++ b/src/main/resources/views/AppointmentMenage-view.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
+<?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TableColumn?>
@@ -15,31 +16,38 @@
     <children>
         <Label fx:id="usernameLabelAppointments" layoutX="594.0" layoutY="30.0" prefHeight="23.0" prefWidth="100.0" text="Label" />
         <Label fx:id="appointmentLabel" alignment="CENTER" layoutX="44.0" layoutY="25.0" prefHeight="34.0" prefWidth="179.0" stylesheets="@../com/project/cwmsgradle/styles.css" text="Zarządzaj zleceniami" />
-        <VBox fx:id="vbAppointment" alignment="TOP_CENTER" layoutX="26.0" layoutY="140.0" prefHeight="384.0" prefWidth="167.0" stylesheets="@../com/project/cwmsgradle/styles.css" AnchorPane.bottomAnchor="20.0" AnchorPane.leftAnchor="20.0" AnchorPane.rightAnchor="533.0">
+        <VBox fx:id="vbAppointment" alignment="CENTER" layoutX="30.0" layoutY="66.0" prefHeight="45.0" prefWidth="680.0" stylesheets="@../com/project/cwmsgradle/styles.css" AnchorPane.bottomAnchor="364.0" AnchorPane.leftAnchor="30.0" AnchorPane.rightAnchor="30.0">
             <opaqueInsets>
                 <Insets />
             </opaqueInsets>
             <children>
-                <Button fx:id="addAppointmentButton" mnemonicParsing="false" onAction="#onAddAppointmentButtonClick" prefHeight="30.0" prefWidth="100.0" text="Dodaj zlecenie">
-                    <VBox.margin>
-                        <Insets top="60.0" />
-                    </VBox.margin>
-                </Button>
-                <Button fx:id="editAppointmentButton" onAction="#onEditAppointmentButtonClick" mnemonicParsing="false" prefHeight="30.0" prefWidth="100.0" text="Edytuj">
-                    <VBox.margin>
-                        <Insets top="15.0" />
-                    </VBox.margin>
-                </Button>
-                <Button fx:id="endAppointmentButton" onAction="#onEndAppointmentButtonClick" mnemonicParsing="false" prefHeight="30.0" prefWidth="100.0" text="Zakończ">
-                    <VBox.margin>
-                        <Insets top="15.0" />
-                    </VBox.margin>
-                </Button>
-                <Button fx:id="goBackButton" mnemonicParsing="false" onAction="#onGoBackButtonClick" prefHeight="20.0" prefWidth="60.0" text="Powrót">
-                    <VBox.margin>
-                        <Insets top="40.0" />
-                    </VBox.margin>
-                </Button>
+            <HBox alignment="CENTER" prefHeight="40.0" prefWidth="690.0">
+               <children>
+                      <Button fx:id="addAppointmentButton" mnemonicParsing="false" onAction="#onAddAppointmentButtonClick" prefHeight="20.0" prefWidth="100.0" text="Dodaj zlecenie">
+                     <HBox.margin>
+                        <Insets right="20.0" />
+                     </HBox.margin>
+                      </Button>
+                      <Button fx:id="editAppointmentButton" mnemonicParsing="false" onAction="#onEditAppointmentButtonClick" prefHeight="20.0" prefWidth="100.0" text="Edytuj">
+                     <HBox.margin>
+                        <Insets right="20.0" />
+                     </HBox.margin>
+                      </Button>
+                      <Button fx:id="endAppointmentButton" mnemonicParsing="false" onAction="#onEndAppointmentButtonClick" prefHeight="20.0" prefWidth="100.0" text="Zakończ">
+                     <HBox.margin>
+                        <Insets right="80.0" />
+                     </HBox.margin>
+                      </Button>
+                      <Button fx:id="goBackButton" mnemonicParsing="false" onAction="#onGoBackButtonClick" prefHeight="20.0" prefWidth="60.0" text="Powrót">
+                     <HBox.margin>
+                        <Insets left="82.0" />
+                     </HBox.margin>
+                      </Button>
+               </children>
+               <cursor>
+                  <Cursor fx:constant="HAND" />
+               </cursor>
+            </HBox>
             </children>
         </VBox>
         <ImageView fitHeight="22.0" fitWidth="22.0" layoutX="22.0" layoutY="31.0">
@@ -47,18 +55,18 @@
                 <Image url="@../icons/naprawa.png" />
             </image>
         </ImageView>
-        <HBox fx:id="hbAppointment" alignment="CENTER" layoutX="198.0" layoutY="66.0" prefHeight="384.0" prefWidth="500.0" stylesheets="@../com/project/cwmsgradle/styles.css" AnchorPane.bottomAnchor="20.0" AnchorPane.rightAnchor="20.0">
+        <HBox fx:id="hbAppointment" alignment="CENTER" layoutX="110.0" layoutY="188.0" prefHeight="324.0" prefWidth="660.0" stylesheets="@../com/project/cwmsgradle/styles.css" AnchorPane.bottomAnchor="20.0" AnchorPane.leftAnchor="30.0" AnchorPane.rightAnchor="30.0">
             <children>
-                <TableView fx:id="appointmentsTableView" prefHeight="384.0" prefWidth="503.0">
+                <TableView fx:id="appointmentsTableView" prefHeight="205.0" prefWidth="607.0">
                     <columns>
-                        <TableColumn fx:id="appointmentIdColumn" prefWidth="45.0" text="ID Zlecenia" />
-                        <TableColumn fx:id="clientColumnAppointment" prefWidth="45.0" text="Klient" />
-                        <TableColumn fx:id="vehicleColumnAppointment" prefWidth="45.0" text="Pojazd" />
-                        <TableColumn fx:id="descriptionColumnAppointment" prefWidth="92.0" text="Opis" />
-                  <TableColumn fx:id="statusColumnAppointment" prefWidth="75.0" text="Status" />
-                        <TableColumn fx:id="dateColumnAppointment" prefWidth="79.0" text="Data" />
-                        <TableColumn fx:id="costColumnAppointment" prefWidth="78.0" text="Koszt" />
-                        <TableColumn fx:id="mechanicColumnAppointment" prefWidth="75.0" text="Obsługuje" />
+                        <TableColumn fx:id="appointmentIdColumn" prefWidth="33.0" text="ID" />
+                        <TableColumn fx:id="clientColumnAppointment" prefWidth="86.0" text="Klient" />
+                        <TableColumn fx:id="vehicleColumnAppointment" prefWidth="86.0" text="Pojazd" />
+                        <TableColumn fx:id="descriptionColumnAppointment" prefWidth="85.0" text="Opis" />
+                  <TableColumn fx:id="statusColumnAppointment" prefWidth="78.0" text="Status" />
+                        <TableColumn fx:id="dateColumnAppointment" prefWidth="84.0" text="Data" />
+                        <TableColumn fx:id="costColumnAppointment" prefWidth="57.0" text="Koszt" />
+                        <TableColumn fx:id="mechanicColumnAppointment" prefWidth="94.0" text="Obsługuje" />
                     </columns>
                     <HBox.margin>
                         <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
