--- a/src/main/resources/com/project/cwmsgradle/styles.css
+++ b/src/main/resources/com/project/cwmsgradle/styles.css
@@ -176,6 +176,11 @@ Label {
     -fx-background-image: url('https://www.transparenttextures.com/patterns/polonez-pattern.png');
 }
 
+#apClientMen{
+    -fx-background-color: white;
+    -fx-background-image: url('https://www.transparenttextures.com/patterns/polonez-pattern.png');
+}
+
 #spAnchorPaneButtons {
     -fx-background-color: linear-gradient(from 0% 0% to 100% 100%, #2A54D2, #6BA0FF);
     -fx-background-radius: 30px;
@@ -197,7 +202,7 @@ Label {
 
 #vbMenVeh, #vbClientMenage, #vbUsers {
     -fx-background-color: linear-gradient(from 0% 0% to 100% 100%, #2A54D2, #6BA0FF);
-    -fx-background-radius: 30px;
+    -fx-background-radius: 10px;
     -fx-effect: dropshadow(three-pass-box, rgba(0, 0, 0, 0.3), 10, 0, 0, 0);
 }
 
