--- a/src/main/resources/views/ClientMenage-view.fxml
+++ b/src/main/resources/views/ClientMenage-view.fxml
@@ -11,7 +11,7 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 
-<AnchorPane prefHeight="480.0" prefWidth="720.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.project.cwmsgradle.controlls.ClientMenageController">
+<AnchorPane fx:id="apClientMen" prefHeight="480.0" prefWidth="720.0" stylesheets="@../com/project/cwmsgradle/styles.css" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.project.cwmsgradle.controlls.ClientMenageController">
     <children>
         <Label fx:id="usernameLabelClient" layoutX="601.0" layoutY="21.0" prefHeight="21.0" prefWidth="104.0" stylesheets="@../com/project/cwmsgradle/styles.css" text="Username" />
         <ImageView fitHeight="45.0" fitWidth="45.0" layoutX="20.0" layoutY="9.0">
@@ -20,39 +20,43 @@
             </image>
         </ImageView>
         <Label fx:id="labelClientMenage" alignment="CENTER" layoutX="65.0" layoutY="14.0" prefHeight="35.0" prefWidth="175.0" stylesheets="@../com/project/cwmsgradle/styles.css" text="Zarządzaj klientami" />
-        <VBox fx:id="vbClientMenage" alignment="TOP_CENTER" layoutX="26.0" layoutY="60.0" prefHeight="400.0" prefWidth="175.0" stylesheets="@../com/project/cwmsgradle/styles.css" AnchorPane.bottomAnchor="20.0" AnchorPane.leftAnchor="20.0">
+        <VBox fx:id="vbClientMenage" alignment="CENTER" layoutX="22.0" layoutY="66.0" prefHeight="46.0" prefWidth="674.0" stylesheets="@../com/project/cwmsgradle/styles.css" AnchorPane.bottomAnchor="367.6" AnchorPane.leftAnchor="30.0" AnchorPane.rightAnchor="30.0">
             <children>
-                <Button fx:id="addButton" mnemonicParsing="false" onAction="#onAddClientButtonClick" prefHeight="35.0" prefWidth="150.0" text="Dodaj Klienta">
-                    <VBox.margin>
-                        <Insets top="65.0" />
-                    </VBox.margin>
-                </Button>
-                <Button fx:id="editButton" mnemonicParsing="false" onAction="#onEditClientButtonClick" prefHeight="35.0" prefWidth="150.0" text="Edytuj">
-                    <VBox.margin>
-                        <Insets top="30.0" />
-                    </VBox.margin>
-                </Button>
-                <Button fx:id="deleteButton" onAction="#onDeleteClientButtonClick" mnemonicParsing="false" prefHeight="35.0" prefWidth="150.0" text="Usuń klienta">
-                    <VBox.margin>
-                        <Insets top="30.0" />
-                    </VBox.margin>
-                </Button>
-                <Button fx:id="goBackButton" mnemonicParsing="false" onAction="#onGoBackButtonClick" prefHeight="25.0" prefWidth="60.0" text="Powrót">
-                    <VBox.margin>
-                        <Insets top="65.0" />
-                    </VBox.margin>
-                </Button>
+            <HBox alignment="CENTER" prefHeight="42.0" prefWidth="175.0">
+               <children>
+                      <Button fx:id="addButton" mnemonicParsing="false" onAction="#onAddClientButtonClick" prefHeight="20.0" prefWidth="150.0" text="Dodaj Klienta">
+                     <HBox.margin>
+                        <Insets right="20.0" />
+                     </HBox.margin>
+                      </Button>
+                      <Button fx:id="editButton" mnemonicParsing="false" onAction="#onEditClientButtonClick" prefHeight="20.0" prefWidth="150.0" text="Edytuj">
+                     <HBox.margin>
+                        <Insets right="20.0" />
+                     </HBox.margin>
+                      </Button>
+                      <Button fx:id="deleteButton" mnemonicParsing="false" onAction="#onDeleteClientButtonClick" prefHeight="20.0" prefWidth="150.0" text="Usuń klienta">
+                     <HBox.margin>
+                        <Insets right="40.0" />
+                     </HBox.margin>
+                      </Button>
+                      <Button fx:id="goBackButton" mnemonicParsing="false" onAction="#onGoBackButtonClick" prefHeight="20.0" prefWidth="60.0" text="Powrót">
+                     <HBox.margin>
+                        <Insets left="40.0" />
+                     </HBox.margin>
+                      </Button>
+               </children>
+            </HBox>
             </children>
         </VBox>
-        <HBox fx:id="hbCliMen" alignment="CENTER" layoutX="213.0" layoutY="60.0" prefHeight="400.0" prefWidth="490.0" stylesheets="@../com/project/cwmsgradle/styles.css" AnchorPane.bottomAnchor="20.0" AnchorPane.rightAnchor="20.0">
+        <HBox fx:id="hbCliMen" alignment="CENTER" layoutX="31.2" layoutY="142.0" prefHeight="320.0" prefWidth="659.0" stylesheets="@../com/project/cwmsgradle/styles.css" AnchorPane.bottomAnchor="30.0" AnchorPane.leftAnchor="31.0" AnchorPane.rightAnchor="30.0">
             <children>
-                <TableView fx:id="clientTableView" prefHeight="362.0" prefWidth="458.0">
+                <TableView fx:id="clientTableView" prefHeight="280.0" prefWidth="614.0">
                     <columns>
-                        <TableColumn fx:id="clientIdColumn" prefWidth="91.0" text="ID Klienta" />
-                        <TableColumn fx:id="nameColumn" prefWidth="91.0" text="Imie" />
-                        <TableColumn fx:id="surnameColumn" prefWidth="91.0" text="Nazwisko" />
-                        <TableColumn fx:id="phoneColumn" prefWidth="91.0" text="Nr. Telefonu" />
-                        <TableColumn fx:id="mailColumn" prefWidth="91.0" text="E-mail" />
+                        <TableColumn fx:id="clientIdColumn" prefWidth="41.599974036216736" text="ID" />
+                        <TableColumn fx:id="nameColumn" prefWidth="116.79999542236328" text="Imie" />
+                        <TableColumn fx:id="surnameColumn" prefWidth="129.6000213623047" text="Nazwisko" />
+                        <TableColumn fx:id="phoneColumn" prefWidth="118.39996337890625" text="Nr. Telefonu" />
+                        <TableColumn fx:id="mailColumn" prefWidth="204.79995727539062" text="E-mail" />
                     </columns>
                     <HBox.margin>
                         <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
