--- a/src/main/resources/views/AppointmentAdd-view.fxml
+++ b/src/main/resources/views/AppointmentAdd-view.fxml
@@ -2,7 +2,6 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextArea?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -14,17 +13,22 @@
          <children>
             <Label fx:id="appointmentAddVehicleLabel" text="Wybierz pojazd">
                <VBox.margin>
-                  <Insets top="30.0" />
+                  <Insets top="20.0" />
                </VBox.margin>
             </Label>
-            <ComboBox fx:id="comboboxAppointmentAdd" prefWidth="202.0">
+            <Button fx:id="selectVehicleButton" onAction="#onSelectVehicleButtonClick" text="Wybierz pojazd">
                <VBox.margin>
                   <Insets left="10.0" right="10.0" top="10.0" />
                </VBox.margin>
-            </ComboBox>
+            </Button>
+            <Label fx:id="selectedVehicleLabel" alignment="CENTER" contentDisplay="CENTER" prefHeight="111.0" prefWidth="202.0" text="Brak wybranego pojazdu" textAlignment="CENTER" wrapText="true">
+               <VBox.margin>
+                  <Insets top="10.0" />
+               </VBox.margin>
+            </Label>
             <Label fx:id="appointmentAddDescriptionLabel" text="Opisz usługę">
                <VBox.margin>
-                  <Insets top="20.0" />
+                  <Insets top="5.0" />
                </VBox.margin>
             </Label>
             <TextArea fx:id="textAreaAppointment" prefHeight="172.0" prefWidth="202.0" stylesheets="@../com/project/cwmsgradle/styles.css">
@@ -35,7 +39,7 @@
          </children>
       </VBox>
       <Label fx:id="appointmentAddLabel" layoutX="300.0" layoutY="29.0" prefHeight="22.0" prefWidth="125.0" text="Dodaj zlecenie" />
-      <Button fx:id="addAppointmentButton" onAction="#onAddAppointmentButtonClick" layoutX="250.0" layoutY="423.0" mnemonicParsing="false" prefHeight="30.0" prefWidth="100.0" text="Dodaj zlecenie" />
-      <Button fx:id="goBackButton" onAction="#onGoBackButtonClick" layoutX="377.0" layoutY="423.0" mnemonicParsing="false" prefHeight="30.0" prefWidth="100.0" text="Powrót" />
+      <Button fx:id="addAppointmentButton" layoutX="250.0" layoutY="423.0" mnemonicParsing="false" onAction="#AddAppointmentButtonClick" prefHeight="30.0" prefWidth="100.0" text="Dodaj zlecenie" />
+      <Button fx:id="goBackButton" layoutX="377.0" layoutY="423.0" mnemonicParsing="false" onAction="#onGoBackButtonClick" prefHeight="30.0" prefWidth="100.0" text="Powrót" />
    </children>
 </AnchorPane>
