--- a/src/main/resources/com/project/cwmsgradle/styles.css
+++ b/src/main/resources/com/project/cwmsgradle/styles.css
@@ -482,13 +482,20 @@ Label {
     -fx-effect: dropshadow(three-pass-box, rgba(0, 0, 0, 0.3), 10, 0, 0, 0);
 }
 
-#apSelectedVehicle{
+#apSelectedVeh{
     -fx-background-color: white;
     -fx-background-image: url('https://www.transparenttextures.com/patterns/polonez-pattern.png');
 }
 
-#hbSelectVehicle{
+#hbSelectVeh{
     -fx-background-color: white;
     -fx-background-radius: 30px;
+    -fx-effect: dropshadow(three-pass-box, rgba(0, 0, 0, 0.3), 10, 0, 0, 0);
+}
+
+#selectVehLabel{
+    -fx-font-family: 'Ubuntu', sans-serif;
+    -fx-font-size: 18px;
+    -fx-text-fill: black;
     -fx-effect: dropshadow(three-pass-box, rgba(0, 0, 0, 0.3), 10, 0, 0, 0);
 }
